# audiobooker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml
.github/workflows/: ci.yml
audiobooker/: __init__.py  cli.py  models.py  project.py  review.py
audiobooker/casting/: __init__.py  dialogue.py  voice_registry.py  voice_suggester.py
audiobooker/language/: __init__.py  en.py  profile.py
audiobooker/nlp/: __init__.py  booknlp_adapter.py  emotion.py  speaker_resolver.py
audiobooker/parser/: __init__.py  epub.py  text.py
audiobooker/renderer/: __init__.py  cache_manifest.py  engine.py  failure_report.py  ffmpeg_runner.py  hash_utils.py  output.py  progress.py  protocols.py
docs/: handbook.md  index.md
examples/: golden_book.txt  sample_book.txt
site/: astro.config.mjs
site/src/: site-config.ts
site/src/content/docs/handbook/: architecture.md  getting-started.md  index.md  reference.md  troubleshooting.md  usage.md
tests/: __init__.py  test_dialogue.py  test_e2e_smoke.py  test_language_profiles.py  test_models.py  test_parsers.py  test_phase1_config_guardrails.py  test_phase5_features.py  test_renderer.py  test_resume.py  test_review.py  test_review_edge_cases.py  test_smoke_render_pipeline.py  test_version.py
tests/fakes/: __init__.py  fake_ffmpeg.py  fake_tts.py
tests/perf/: __init__.py  conftest.py  test_benchmarks.py
