[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobooker-ai"
version = "0.5.0"
description = "AI Audiobook Generator - Convert books to narrated audiobooks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com"}
]
keywords = [
    "audiobook",
    "tts",
    "text-to-speech",
    "ai",
    "narration",
    "epub",
    "multi-voice",
    "dialogue-detection",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "ebooklib>=0.18",
]

[project.optional-dependencies]
render = [
    "voice-soundboard",
]
nlp = [
    "booknlp>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
audiobooker = "audiobooker.cli:main"

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/audiobooker"
Repository = "https://github.com/mcp-tool-shop-org/audiobooker"
Issues = "https://github.com/mcp-tool-shop-org/audiobooker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["audiobooker*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["audiobooker"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
